# harness-skills

./: .gitignore  README.md  pyproject.toml
skills/docs-harness/: SKILL.md  pyproject.toml
skills/docs-harness/agents/: openai.yaml
skills/docs-harness/harness/: docs.yaml  env-vars.yaml  kit-lock.yaml  manifest.yaml
skills/docs-harness/harness/templates/: AGENTS.md
skills/docs-harness/harness/templates/docs/: index.md
skills/docs-harness/harness/templates/specs/: index.md
skills/docs-harness/scripts/harness/: build_export_repo.py  release_matrix.py
skills/docs-harness/scripts/harness/docs/: common.py  generate_doc_gardening_report.py  generate_service_inventory.py  verify.py
skills/docs-harness/scripts/harness/observability/: checks.py  generate_dashboard_index.py  generate_signal_inventory.py  verify.py
skills/docs-harness/scripts/harness/schemas/: harness.docs.v1.schema.json  harness.env-vars.v1.schema.json  harness.manifest.v1.schema.json
skills/docs-harness/scripts/harness/traceability/: generate_http_endpoints_inventory.py
skills/observability-harness/: SKILL.md  pyproject.toml
skills/observability-harness/agents/: openai.yaml
skills/observability-harness/harness/: VERSIONING.md  ownership.yaml  traceability.yaml
skills/observability-harness/harness/observability/: signals.yaml
skills/observability-harness/harness/releases/: v1.0.0.md
skills/observability-harness/scripts/harness/: build_export_repo.py  export_skill_bundles.py  harness.py
skills/observability-harness/scripts/harness/docs/: generate_doc_inventory.py  generate_generated_index.py
skills/observability-harness/scripts/harness/observability/: ci.py  common.py  smoke.py  (+1 more)
skills/traceability-harness/: SKILL.md  pyproject.toml
skills/traceability-harness/agents/: openai.yaml
skills/traceability-harness/harness/: CONTRACT.md  surface-registry.yaml
skills/traceability-harness/harness/observability/: baseline.yaml
skills/traceability-harness/references/: contract.md  language-support.md
skills/traceability-harness/scripts/harness/: bootstrap.py  build_export_repo.py  service_profiles.py
(+86 files in other folders)
